Revert "Fix scrollbars with custom stage size"
This reverts commit 142741453ece1a798c33eb815a28672232c637cb.

This is now managed by scratch-gui gui.jsx instead

--- a/src-renderer-webpack/editor/gui/gui.css
+++ b/src-renderer-webpack/editor/gui/gui.css
@@ -4,6 +4,8 @@
   left: 0;
   width: 100%;
   height: 100%;
+  min-width: 1024px;
+  min-height: 640px;
 }
 a {
   color: #25d;
